fixing for mobile

--- a/index.html
+++ b/index.html
@@ -61,7 +61,14 @@
 		<div id="intro">
     			<div class="container">
     				<div class="row">
-					<div class="col-md-4">
+					<div class="col-md-8 pull-right">
+						<div class="intro-body">
+							<h1 class="wow animated fadeIn" data-wow-delay="0.1s">Simple Subscription SaaS</h1>
+							<h3 class="wow animated fadeInLeft" data-wow-delay="0.6s">Your custom business needs solved at a standard affordable monthly rate</h3>
+							<br>
+						</div>
+	    				</div>
+					<div class="col-md-4 pull-left">
 						<div class="panel">
 							<div class="panel panel-heading text-center">
 								<h3>Schedule Free Consultation</h3>
@@ -81,13 +88,6 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-8">
-						<div class="intro-body">
-							<h1 class="wow animated fadeIn" data-wow-delay="0.1s">Simple Subscription SaaS</h1>
-							<h3 class="wow animated fadeInLeft" data-wow-delay="0.6s">Your custom business needs solved at a standard affordable monthly rate</h3>
-							<br>
-						</div>
-	    				</div>
 				</div>
 			</div>
 		</div>
