--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<h3>Schedule Free Consultation</h3>
 							</div>
 							<!-- Begin MailChimp Signup Form -->
-							<div class="panel panel-body">
+							<div class="panel panel-body mc_embed_signup">
 								<form action="https://initialapps.us17.list-manage.com/subscribe/post?u=be1e3164b5fc55f0407c2859c&amp;id=8349058064" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 									<div class="form-group col-xs-12">
 										<input type="text" value="" name="NAME" id="mce-NAME" class="form-control" placeholder="Your Name" required>
@@ -83,14 +83,14 @@
 									<div class="form-group col-xs-12">
 										<input type="email" value="" name="EMAIL" id="mce-EMAIL"class="required email form-control" placeholder="Your Email" required>
 									</div>
-									<div id="mce-responses" class="clear">
+									<div id="mce-responses" class="clear text-center">
 										<div class="response" id="mce-error-response" style="display:none"></div>
 										<div class="response" id="mce-success-response" style="display:none"></div>
 									</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 									<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_be1e3164b5fc55f0407c2859c_8349058064" tabindex="-1" value=""></div>
 
 									<div class="form-group col-xs-12">
-										<button type="submit" class="btn btn-default" style="width:100%;" name="subscribe">Submit</button>
+										<button type="submit" id="mc-embedded-subscribe" class="btn btn-default" style="width:100%;" name="subscribe">Submit</button>
 									</div>
 									<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='NAME';ftypes[1]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 								</form>
