fixing for mobile

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<h3>Schedule Free Consultation</h3>
 							</div>
 							<!-- Begin MailChimp Signup Form -->
-							<div class="panel panel-body" id="mc_embed_signup">
+							<div class="panel panel-body">
 								<form action="https://initialapps.us17.list-manage.com/subscribe/post?u=be1e3164b5fc55f0407c2859c&amp;id=8349058064" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 									<div class="form-group col-xs-12">
 										<input type="text" value="" name="NAME" id="mce-NAME" class="form-control" placeholder="Your Name" required>
