--- a/index.html
+++ b/index.html
@@ -83,14 +83,15 @@
 									<div class="form-group col-xs-12">
 										<input type="email" value="" name="EMAIL" id="mce-EMAIL"class="required email form-control" placeholder="Your Email" required>
 									</div>
-									<div id="mce-responses" class="clear text-center">
-										<div class="response" id="mce-error-response" style="display:none"></div>
-										<div class="response" id="mce-success-response" style="display:none"></div>
-									</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-									<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_be1e3164b5fc55f0407c2859c_8349058064" tabindex="-1" value=""></div>
-
 									<div class="form-group col-xs-12">
 										<button type="submit" id="mc-embedded-subscribe" class="btn btn-default" style="width:100%;" name="subscribe">Submit</button>
+									</div>
+									<div class="form-group col-xs-12" style="max-height:45px;">
+										<div id="mce-responses" class="clear text-center">
+											<div class="response" id="mce-error-response" style="display:none"></div>
+											<div class="response" id="mce-success-response" style="display:none"></div>
+										</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+										<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_be1e3164b5fc55f0407c2859c_8349058064" tabindex="-1" value=""></div>
 									</div>
 									<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='NAME';ftypes[1]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 								</form>
