--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 		<script type="text/javascript" src="js/bootstrap.js"></script>
 		<script type="text/javascript" src="js/SmoothScroll.js"></script>
 		<script type="text/javascript" src="js/jqBootstrapValidation.js"></script> 
-		<script type="text/javascript" src="js/contact_me.js"></script> 
+		<!--<script type="text/javascript" src="js/contact_me.js"></script> -->
 		<script type="text/javascript" src="js/owl.carousel.min.js"></script> 
 		<script type="text/javascript" src="js/wow.min.js"></script> 
 		
