--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -3,23 +3,23 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>3D Tek CNC</title>
+		<title>3D TEK CNC</title>
 		<meta name="description" content="">
 		<meta name="author" content="">
 		
 		<!-- Bootstrap -->
-		<link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
+		<link rel="stylesheet" type="text/css"	href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
 		
 		<!-- Stylesheet
-    		================================================== -->
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+				================================================== -->
 		<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
 		<link rel="stylesheet" type="text/css" href="css/animate.min.css">
+		<link rel="stylesheet" type="text/css" href="css/slick.css">
+		<link rel="stylesheet" type="text/css" href="css/slick-theme.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,800,600,300' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,700,800,600,300' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Karla:400,700,800,600,300' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700,800,600,300' rel='stylesheet' type='text/css'>
 		
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 				<!-- /.navbar-collapse --> 
-  			
+				
 			</div>
 			<!-- /.container --> 
 		</nav>
@@ -78,21 +78,81 @@
 			</div>
 		</div>
 		
-		<!-- Header -->
 		<div id="intro">
+			<div id="intro-carousel" class="carousel slide" data-ride="carousel">
+				<!-- Indicators -->
+				<ol class="carousel-indicators">
+					<li data-target="#intro-carousel" data-slide-to="0" class="active"></li>
+					<li data-target="#intro-carousel" data-slide-to="1"></li>
+				</ol>
+			
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner" role="listbox">
+					<div class="item active">
+						<!-- Header -->
+						<div id="intro-1">
+							<div class="intro-body">
+								<div class="container">
+									<div class="row">
+										<div class="col-md-12">
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Header<br>Top Header Text</h1>
+											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">Secondary Header Text</h3>
+											<br>
+											<a href="#services" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+			
+					</div>
+					<div class="item">
+						<!-- Header -->
+						<div id="intro-2">
+							<div class="intro-body">
+								<div class="container">
+									<div class="row">
+										<div class="col-md-12">
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Header<br>Top Header Text</h1>
+											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">Secondary Header Text</h3>
+											<br>
+											<a href="#services" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+			
+					</div>
+				</div>
+			
+				<!-- Controls -->
+				<a class="left carousel-control" href="#intro-carousel" role="button" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="right carousel-control" href="#intro-carousel" role="button" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>	
+		</div>
+
+		<!-- Header -->
+		<!--<div id="intro">
 			<div class="intro-body">
-    				<div class="container">
-    					<div class="row">
+						<div class="container">
+							<div class="row">
 						<div class="col-md-12">
 							<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Header<br>Top Header Text</h1>
 							<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">Secondary Header Text</h3>
 							<br>
 							<a href="#services" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
 						</div>
-	    				</div>
+							</div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 
 		<!-- About Section -->
 		<div id="about">
@@ -143,22 +203,22 @@
 								</blockquote>
 							</div>
 							<div class="col-sm-4">
-    							<blockquote><i class="fa fa-quote-left"></i>
-    								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
-    								<div class="clients-name">
+									<blockquote><i class="fa fa-quote-left"></i>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
+										<div class="clients-name">
 										<p><strong>Jane Doe</strong><br>
 										<em></em></p>
-    								</div>
-    							</blockquote>
+										</div>
+									</blockquote>
 							</div>
 							<div class="col-sm-4">
-    							<blockquote><i class="fa fa-quote-left"></i>
-    								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
-    								<div class="clients-name">
+									<blockquote><i class="fa fa-quote-left"></i>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
+										<div class="clients-name">
 										<p><strong>Chris Smith</strong><br>
 										<em></em></p>
-    								</div>
-    							</blockquote>
+										</div>
+									</blockquote>
 							</div>
 						</div>
 					</div>
@@ -173,15 +233,31 @@
 					<h2>Our Capabilities</h2>
 					<hr>
 				</div>
-				<div class="row text-center">
-					<div class="col-md-4 wow animated fadeInDown" data-wow-delay="0.3s">
-						<img src="http://via.placeholder.com/350x250">
+
+				<div class="row text-center image-slider">
+					<div class="col-md-4 text-center wow animated fadeIn">
+						<img src="img/fanuc.jpg" height="300">
+						<h4>Fanuc Robodrill, <br>10,000 RPM Spindle, Fanuc 31i-B5 Control.</h4>
 					</div>
-					<div class="col-md-4 wow animated fadeInDown" data-wow-delay="0.6s">
-						<img src="http://via.placeholder.com/350x250">
+					<div class="col-md-4 text-center wow animated fadeIn">
+						<img src="img/okuma.jpg" height="300">
+						<h4>Okuma MC-V3016, <br>15,000 RPM Spindle, OSP E100M Control.</h4>
 					</div>
-					<div class="col-md-4 wow animated fadeInDown" data-wow-delay="0.9s">
-						<img src="http://via.placeholder.com/350x250">
+					<div class="col-md-4 text-center wow animated fadeIn">
+						<img src="img/optivision.jpg" height="300">
+						<h4>Optiv CMM Vision System. <br>Optional Tesa Probe kit and CAD+ installed.</h4>
+					</div>
+					<div class="col-md-4 text-center wow animated fadeIn">
+						<img src="img/fanuc.jpg" height="300">
+						<h4>Fanuc Robodrill, <br>10,000 RPM Spindle, Fanuc 31i-B5 Control.</h4>
+					</div>
+					<div class="col-md-4 text-center wow animated fadeIn">
+						<img src="img/okuma.jpg" height="300">
+						<h4>Okuma MC-V3016, <br>15,000 RPM Spindle, OSP E100M Control.</h4>
+					</div>
+					<div class="col-md-4 text-center wow animated fadeIn">
+						<img src="img/optivision.jpg" height="300">
+						<h4>Optiv CMM Vision System. <br>Optional Tesa Probe kit and CAD+ installed.</h4>
 					</div>
 				</div>
 				<br>
@@ -189,7 +265,7 @@
 				<br>
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<a href="#" class="btn btn-default">View Our Latest News</a>
+						<a href="#" class="btn btn-default">View More</a>
 					</div>
 				</div>
 			</div>
@@ -278,11 +354,10 @@
 		<script type="text/javascript" src="js/contact_me.js"></script> 
 		<script type="text/javascript" src="js/owl.carousel.min.js"></script> 
 		<script type="text/javascript" src="js/wow.min.js"></script> 
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script> 
-		
+		<script type="text/javascript" src="js/slick.js"></script> 
 		
 		<!-- Javascripts
-    		================================================== --> 
+				================================================== --> 
 		<script type="text/javascript" src="js/main.js"></script>
 		<script>new WOW().init();</script>
 	</body>
