--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -236,27 +236,27 @@
 				</div>
 
 				<div class="row text-center image-slider">
-					<div class="col-md-4 text-center wow animated fadeIn">
+					<div class="col-xs-4 text-center wow animated fadeIn">
 						<img src="img/fanuc.jpg" height="300">
 						<h4>Fanuc Robodrill, <br>10,000 RPM Spindle, Fanuc 31i-B5 Control.</h4>
 					</div>
-					<div class="col-md-4 text-center wow animated fadeIn">
+					<div class="col-xs-4 text-center wow animated fadeIn">
 						<img src="img/okuma.jpg" height="300">
 						<h4>Okuma MC-V3016, <br>15,000 RPM Spindle, OSP E100M Control.</h4>
 					</div>
-					<div class="col-md-4 text-center wow animated fadeIn">
+					<div class="col-xs-4 text-center wow animated fadeIn">
 						<img src="img/optivision.jpg" height="300">
 						<h4>Optiv CMM Vision System. <br>Optional Tesa Probe kit and CAD+ installed.</h4>
 					</div>
-					<div class="col-md-4 text-center wow animated fadeIn">
+					<div class="col-xs-4 text-center wow animated fadeIn">
 						<img src="img/fanuc.jpg" height="300">
 						<h4>Fanuc Robodrill, <br>10,000 RPM Spindle, Fanuc 31i-B5 Control.</h4>
 					</div>
-					<div class="col-md-4 text-center wow animated fadeIn">
+					<div class="col-xs-4 text-center wow animated fadeIn">
 						<img src="img/okuma.jpg" height="300">
 						<h4>Okuma MC-V3016, <br>15,000 RPM Spindle, OSP E100M Control.</h4>
 					</div>
-					<div class="col-md-4 text-center wow animated fadeIn">
+					<div class="col-xs-4 text-center wow animated fadeIn">
 						<img src="img/optivision.jpg" height="300">
 						<h4>Optiv CMM Vision System. <br>Optional Tesa Probe kit and CAD+ installed.</h4>
 					</div>
