--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -142,15 +142,15 @@
 		<!-- Header -->
 		<!--<div id="intro">
 			<div class="intro-body">
-						<div class="container">
-							<div class="row">
+				<div class="container">
+					<div class="row">
 						<div class="col-md-12">
 							<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Header<br>Top Header Text</h1>
 							<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">Secondary Header Text</h3>
 							<br>
 							<a href="#services" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
 						</div>
-							</div>
+					</div>
 				</div>
 			</div>
 		</div>-->
@@ -178,50 +178,6 @@
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<a href="#" class="btn btn-default">View Our Latest News</a>
-					</div>
-				</div>
-			</div>
-		</div>
-
-
-		<!-- Testimonials Section -->
-		<div id="testimonials" class="text-center">
-			<div class="container">
-				<div class="section-title center">
-					<h2>What our customers say</h2>
-					<hr>
-					</div>
-					<div class="row">
-					<div class="col-md-10 col-md-offset-1">
-						<div class="row testimonials">
-							<div class="col-sm-4">
-								<blockquote><i class="fa fa-quote-left"></i>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
-									<div class="clients-name">
-										<p><strong>John Doe</strong><br>
-										<em></em></p>
-									</div>
-								</blockquote>
-							</div>
-							<div class="col-sm-4">
-									<blockquote><i class="fa fa-quote-left"></i>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
-										<div class="clients-name">
-										<p><strong>Jane Doe</strong><br>
-										<em></em></p>
-										</div>
-									</blockquote>
-							</div>
-							<div class="col-sm-4">
-									<blockquote><i class="fa fa-quote-left"></i>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
-										<div class="clients-name">
-										<p><strong>Chris Smith</strong><br>
-										<em></em></p>
-										</div>
-									</blockquote>
-							</div>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -269,6 +225,112 @@
 						<a href="#" class="btn btn-default">View More</a>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<!-- Testimonials Section -->
+		<div id="testimonials" class="text-center">
+			<div class="container">
+				<div class="section-title center">
+					<h2>What our customers say</h2>
+					<hr>
+					</div>
+					<div class="row">
+					<div class="col-md-10 col-md-offset-1">
+						<div class="row testimonials">
+							<div class="col-sm-4">
+								<blockquote><i class="fa fa-quote-left"></i>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
+									<div class="clients-name">
+										<p><strong>John Doe</strong><br>
+										<em></em></p>
+									</div>
+								</blockquote>
+							</div>
+							<div class="col-sm-4">
+								<blockquote><i class="fa fa-quote-left"></i>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
+									<div class="clients-name">
+									<p><strong>Jane Doe</strong><br>
+									<em></em></p>
+									</div>
+								</blockquote>
+							</div>
+							<div class="col-sm-4">
+								<blockquote><i class="fa fa-quote-left"></i>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
+									<div class="clients-name">
+									<p><strong>Chris Smith</strong><br>
+									<em></em></p>
+									</div>
+								</blockquote>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Gallery Section -->
+		<div id="services">
+			<div class="container">
+				<div class="section-title text-center center">
+					<h2>Our Services</h2>
+					<hr>
+				</div>
+
+				<div class="row">
+					<div class="col-sm-9">
+						<div class="row text-center gallery-slider-for">
+							<div class="col-xs-12 text-center wow animated fadeIn">
+								<img src="img/fanuc.jpg" height="500">
+							</div>
+							<div class="col-xs-12 text-center wow animated fadeIn">
+								<img src="img/okuma.jpg" height="500">
+							</div>
+							<div class="col-xs-12 text-center wow animated fadeIn">
+								<img src="img/optivision.jpg" height="500">
+							</div>
+							<div class="col-xs-12 text-center wow animated fadeIn">
+								<img src="img/fanuc.jpg" height="500">
+							</div>
+							<div class="col-xs-12 text-center wow animated fadeIn">
+								<img src="img/okuma.jpg" height="500">
+							</div>
+							<div class="col-xs-12 text-center wow animated fadeIn">
+								<img src="img/optivision.jpg" height="500">
+							</div>
+						</div>
+		
+						<div class="row text-center gallery-slider-nav">
+							<div class="col-xs-2 text-center wow animated fadeIn">
+								<img src="img/fanuc.jpg" height="75">
+							</div>
+							<div class="col-xs-2 text-center wow animated fadeIn">
+								<img src="img/okuma.jpg" height="75">
+							</div>
+							<div class="col-xs-2 text-center wow animated fadeIn">
+								<img src="img/optivision.jpg" height="75">
+							</div>
+							<div class="col-xs-2 text-center wow animated fadeIn">
+								<img src="img/fanuc.jpg" height="75">
+							</div>
+							<div class="col-xs-2 text-center wow animated fadeIn">
+								<img src="img/okuma.jpg" height="75">
+							</div>
+							<div class="col-xs-2 text-center wow animated fadeIn">
+								<img src="img/optivision.jpg" height="75">
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<h4><a href="#">Section Title</a></h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+					</div>
+				</div>
+
+				<br>
+				<br>
 			</div>
 		</div>
 
