--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -283,43 +283,44 @@
 					<div class="col-sm-9">
 						<div class="row text-center gallery-slider-for">
 							<div class="col-xs-12 text-center wow animated fadeIn">
-								<img src="img/fanuc.jpg" height="500">
+								<img src="img/fanuc.jpg">
 							</div>
 							<div class="col-xs-12 text-center wow animated fadeIn">
-								<img src="img/okuma.jpg" height="500">
+								<img src="img/okuma.jpg">
 							</div>
 							<div class="col-xs-12 text-center wow animated fadeIn">
-								<img src="img/optivision.jpg" height="500">
+								<img src="img/optivision.jpg">
 							</div>
 							<div class="col-xs-12 text-center wow animated fadeIn">
-								<img src="img/fanuc.jpg" height="500">
+								<img src="img/fanuc.jpg">
 							</div>
 							<div class="col-xs-12 text-center wow animated fadeIn">
-								<img src="img/okuma.jpg" height="500">
+								<img src="img/okuma.jpg">
 							</div>
 							<div class="col-xs-12 text-center wow animated fadeIn">
-								<img src="img/optivision.jpg" height="500">
+								<img src="img/optivision.jpg">
 							</div>
 						</div>
 		
-						<div class="row text-center gallery-slider-nav">
+						<div class="row text-center gallery-slider-nav hidden-xs">
 							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/fanuc.jpg" height="75">
+								<img src="img/fanuc.jpg" height="50">
 							</div>
 							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/okuma.jpg" height="75">
+								<img src="img/okuma.jpg" height="50">
 							</div>
 							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/optivision.jpg" height="75">
+								<img src="img/optivision.jpg" height="50">
 							</div>
 							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/fanuc.jpg" height="75">
+								<img src="img/fanuc.jpg" height="50">
+
 							</div>
 							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/okuma.jpg" height="75">
+								<img src="img/okuma.jpg" height="50">
 							</div>
 							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/optivision.jpg" height="75">
+								<img src="img/optivision.jpg" height="50">
 							</div>
 						</div>
 					</div>
