--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -52,6 +52,7 @@
 							<li class="hidden"> <a href="#page-top"></a> </li>
 							<li> <a href="#"><i class="fa fa-phone" aria-hidden="true"></i> (555) 555-5555</a></li>
 							<li> <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> email@email.com</a></li>
+							<li> <a href="#" class="nav-button">Request A Quote</a></li>
 						</ul>
 					</div>
 				</div>
@@ -67,14 +68,16 @@
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-right navbar-sub-collapse">
-					<ul class="nav navbar-nav">
-						<!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-						<li class="hidden"> <a href="#page-top"></a> </li>
-						<li> <a class="page-scroll" href="#about">About Us</a> </li>
-						<li> <a class="page-scroll" href="#testimonials">Testimonials</a> </li>
-						<li> <a class="page-scroll" href="#capabilities">Our Capabilities</a> </li>
-						<li> <a class="page-scroll" href="#contact">Contact Us</a> </li>
-					</ul>
+					<div class="container-fluid">
+						<ul class="nav navbar-nav">
+							<!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+							<li class="hidden"> <a href="#page-top"></a> </li>
+							<li> <a class="page-scroll" href="#about">About Us</a> </li>
+							<li> <a class="page-scroll" href="#testimonials">Testimonials</a> </li>
+							<li> <a class="page-scroll" href="#capabilities">Our Capabilities</a> </li>
+							<li> <a class="page-scroll" href="#contact">Contact Us</a> </li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
