--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -50,8 +50,7 @@
 						<ul class="nav navbar-nav">
 							<!-- Hidden li included to remove active class from about link when scrolled up past about section -->
 							<li class="hidden"> <a href="#page-top"></a> </li>
-							<li> <a href="#"><i class="fa fa-phone" aria-hidden="true"></i> (555) 555-5555</a></li>
-							<li> <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> email@email.com</a></li>
+							<li> <a href="#"><i class="fa fa-phone" aria-hidden="true"></i> (805) 588-6559</a></li>
 							<li> <a href="#" class="nav-button">Request A Quote</a></li>
 						</ul>
 					</div>
@@ -75,6 +74,7 @@
 							<li> <a class="page-scroll" href="#about">About Us</a> </li>
 							<li> <a class="page-scroll" href="#testimonials">Testimonials</a> </li>
 							<li> <a class="page-scroll" href="#capabilities">Our Capabilities</a> </li>
+							<li> <a class="page-scroll" href="#facilities">Our Facilities</a> </li>
 							<li> <a class="page-scroll" href="#contact">Contact Us</a> </li>
 						</ul>
 					</div>
@@ -167,22 +167,22 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<h4><a href="#">Section Title</a></h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+						<h3><a href="#">Precision Medical Components<br><small><i class="text-center text-info">(Section sub-titles are good for SEO. Above is an example.  We can think of good keywords for your business)</i></small></a></h3>
+						<p>
+							3D TEK CNC, INC. is a premier manufacturer for the medical device market. Specializing in precision medical components and micro mold builds for implantable silicone components.
+						</p>
+						<p>
+							With over 30 years of machining experience, 3D TEK CNC, INC. is capable of machining all types of medical grade materials, including Titanium 6AL-4V, Niobium, Polysulfone and PEEK. Whether your needs are prototype or production volumes, tooling or assembled fixtures, 3D TEK CNC has the expertise to help you bring your medical products to market.
+						</p>
 					</div>
 					<div class="col-md-6">
-						<h4><a href="#">Section Title</a></h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+						<img src="http://via.placeholder.com/500x350">
+						<i class="text-center text-info">(maybe add a picture of your team or shop)</i>
 					</div>
 				</div>
 				<br>
 				<br>
 				<br>
-				<div class="row">
-					<div class="col-md-12 text-center">
-						<a href="#" class="btn btn-default">View Our Latest News</a>
-					</div>
-				</div>
 			</div>
 		</div>
 
@@ -283,31 +283,31 @@
 				</div>
 
 				<div class="row">
-					<div class="col-sm-9">
-						<div class="row text-center gallery-slider-for">
-							<div class="col-xs-12 text-center wow animated fadeIn">
-								<img src="img/fanuc.jpg">
+					<div class="col-sm-8">
+						<div class="text-center gallery-slider-for">
+							<div class="text-center wow animated fadeIn">
+								<img src="img/3D-TEK-Mold-Cavity.png">
 							</div>
-							<div class="col-xs-12 text-center wow animated fadeIn">
+							<div class="text-center wow animated fadeIn">
 								<img src="img/okuma.jpg">
 							</div>
-							<div class="col-xs-12 text-center wow animated fadeIn">
+							<div class="text-center wow animated fadeIn">
 								<img src="img/optivision.jpg">
 							</div>
-							<div class="col-xs-12 text-center wow animated fadeIn">
-								<img src="img/fanuc.jpg">
+							<div class="text-center wow animated fadeIn">
+								<img src="img/3D-TEK-Mold-Cavity.png">
 							</div>
-							<div class="col-xs-12 text-center wow animated fadeIn">
+							<div class="text-center wow animated fadeIn">
 								<img src="img/okuma.jpg">
 							</div>
-							<div class="col-xs-12 text-center wow animated fadeIn">
+							<div class="text-center wow animated fadeIn">
 								<img src="img/optivision.jpg">
 							</div>
 						</div>
-		
+						<br>
 						<div class="row text-center gallery-slider-nav hidden-xs">
 							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/fanuc.jpg" height="50">
+								<img src="img/3D-TEK-Mold-Cavity.png" height="50">
 							</div>
 							<div class="col-xs-2 text-center wow animated fadeIn">
 								<img src="img/okuma.jpg" height="50">
@@ -316,7 +316,7 @@
 								<img src="img/optivision.jpg" height="50">
 							</div>
 							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/fanuc.jpg" height="50">
+								<img src="img/3D-TEK-Mold-Cavity.png" height="50">
 
 							</div>
 							<div class="col-xs-2 text-center wow animated fadeIn">
@@ -327,7 +327,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3">
+					<div class="col-sm-4">
 						<h4><a href="#">Section Title</a></h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 					</div>
@@ -338,6 +338,35 @@
 			</div>
 		</div>
 
+		<!-- About Section -->
+		<div id="about">
+			<div class="container">
+				<div class="section-title text-center center">
+					<h2>Our Facilities</h2>
+					<hr>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d26398.043271431732!2d-119.1456021!3d34.2037253!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e84eaea82c016b%3A0x4b42beadb7ad3cb9!2s2362+Sturgis+Rd%2C+Oxnard%2C+CA+93030!5e0!3m2!1sen!2sus!4v1527218823837" width="500" height="375" frameborder="0" style="border:1px #ccc solid;" allowfullscreen></iframe>
+					</div>
+					<div class="col-md-6">
+						<h4>
+							<span class="fa-stack fa-lg">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-map-marker fa-stack-1x fa-inverse"></i> 
+							</span>
+							2362 Sturgis Rd. Oxnard, CA 93030
+						</h4>
+						<br>
+						<p>Located in Ventura County 3D TEK CNC, INC. is a premier supplier of precision machined components to the medical device market.</p>
+						<p>Our continuous investment in State-Of-The-Art CNC Machining Centers provides our customers with the assurance that we can meet their high precision component requirements.</p>
+					</div>
+				</div>
+				<br>
+				<br>
+				<br>
+			</div>
+		</div>
 
 		<!-- Quote Section -->
 		<div id="quote">
@@ -380,21 +409,21 @@
 										<i class="fa fa-circle fa-stack-2x"></i>
 										<i class="fa fa-map-marker fa-stack-1x fa-inverse"></i> 
 									</span>
-									12345 Abc St., City, ST 67890 
+									2362 Sturgis Rd. Oxnard, CA 93030
 								</li>
 								<li>
 									<span class="fa-stack fa-lg">
 										<i class="fa fa-circle fa-stack-2x"></i>
 										<i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
 									</span> 
-									 email@email.com
+									 NOEL@3DTEKCNC.COM
 								</li>
 								<li>
 									<span class="fa-stack fa-lg">
 										<i class="fa fa-circle fa-stack-2x"></i>
 										<i class="fa fa-phone fa-stack-1x fa-inverse"></i>
 									</span> 
-									(555) 555-5555
+									(805) 588-6559
 								</li>
 							</ul>
 						</div>
