--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -168,7 +168,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<h3><a href="#">Precision Medical Components<br><small><i class="text-center text-info">(Section sub-titles are good for SEO. Above is an example.  We can think of good keywords for your business)</i></small></a></h3>
+						<h3><a href="#">Premier Precision Machining</a></h3>
 						<p>
 							3D TEK CNC, INC. is a premier manufacturer for the medical device market. Specializing in precision medical components and micro mold builds for implantable silicone components.
 						</p>
@@ -177,8 +177,8 @@
 						</p>
 					</div>
 					<div class="col-md-6">
-						<img src="http://via.placeholder.com/500x350">
-						<i class="text-center text-info">(maybe add a picture of your team or shop)</i>
+						<!--<img src="http://via.placeholder.com/500x350">-->
+						<img width="500" src="img/machine-shop.jpg">
 					</div>
 				</div>
 				<br>
