--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -290,42 +290,42 @@
 								<img src="img/3D-TEK-Mold-Cavity.png">
 							</div>
 							<div class="text-center wow animated fadeIn">
-								<img src="img/okuma.jpg">
+								<img src="img/part-machined-cavity.JPG">
 							</div>
 							<div class="text-center wow animated fadeIn">
-								<img src="img/optivision.jpg">
+								<img src="img/part-machined-cavity-2.JPG">
 							</div>
 							<div class="text-center wow animated fadeIn">
-								<img src="img/3D-TEK-Mold-Cavity.png">
+								<img src="img/machined-parts.JPG">
 							</div>
 							<div class="text-center wow animated fadeIn">
-								<img src="img/okuma.jpg">
+								<img src="img/precision-machined-parts.JPG">
 							</div>
 							<div class="text-center wow animated fadeIn">
-								<img src="img/optivision.jpg">
+								<img src="img/machined-parts-2.jpg">
 							</div>
 						</div>
 						<br>
 						<div class="row text-center gallery-slider-nav hidden-xs">
-							<div class="col-xs-2 text-center wow animated fadeIn">
+							<div class="text-center wow animated fadeIn">
 								<img src="img/3D-TEK-Mold-Cavity.png" height="50">
 							</div>
-							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/okuma.jpg" height="50">
+							<div class="text-center wow animated fadeIn">
+								<img src="img/part-machined-cavity.JPG" height="50">
 							</div>
-							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/optivision.jpg" height="50">
+							<div class="text-center wow animated fadeIn">
+								<img src="img/part-machined-cavity-2.JPG" height="50">
 							</div>
-							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/3D-TEK-Mold-Cavity.png" height="50">
+							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-parts.JPG" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/precision-machined-parts.JPG" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-parts-2.jpg" height="50">
+							</div>
 
-							</div>
-							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/okuma.jpg" height="50">
-							</div>
-							<div class="col-xs-2 text-center wow animated fadeIn">
-								<img src="img/optivision.jpg" height="50">
-							</div>
 						</div>
 					</div>
 					<div class="col-sm-4">
