--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -304,6 +304,12 @@
 							<div class="text-center wow animated fadeIn">
 								<img src="img/machined-parts-2.jpg">
 							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/multi-axis-machining-1.jpg">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/multi-axis-machining-2.jpg">
+							</div>
 						</div>
 						<br>
 						<div class="row text-center gallery-slider-nav hidden-xs">
@@ -324,6 +330,12 @@
 							</div>
 							<div class="text-center wow animated fadeIn">
 								<img src="img/machined-parts-2.jpg" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/multi-axis-machining-1.jpg" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/multi-axis-machining-2.jpg" height="50">
 							</div>
 
 						</div>
