--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-sub-collapse"> <i class="fa fa-bars"></i> </button>
-					<a class="navbar-brand page-scroll" href="#page-top">IA</a>
+					<a class="navbar-brand page-scroll" href="#page-top"><img src="/img/favicon.png" width="40px"></a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-right navbar-sub-collapse">
