--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     				<div class="row">
 					<div class="col-md-8 pull-right">
 						<div class="intro-body">
-							<h1 class="wow animated fadeIn" data-wow-delay="0.1s">Simple Subscription SaaS</h1>
-							<h3 class="wow animated fadeInLeft" data-wow-delay="0.6s">Your custom business needs solved at a standard affordable monthly rate</h3>
+							<h1 class="wow animated fadeIn" data-wow-delay="0.1s">Helping your business grow</h1>
+							<h3 class="wow animated fadeInLeft" data-wow-delay="0.6s">Websites, SaaS, Content Marketing</h3>
 							<br>
 						</div>
 	    				</div>
