moving ia static to about

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Initial Apps | Simple Subscription SaaS</title>
-		<meta name="description" content="">
+		<title>Initial Apps</title>
+		<meta name="description" content="Help your business grow - websites | SaaS | Content Marketing">
 		<meta name="author" content="">
 
 		<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>		
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		
 		<link href='http://fonts.googleapis.com/css?family=Raleway:400,700,800,600,300' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Lato:400,700,800,600,300' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700,800,600,300' rel='stylesheet' type='text/css'>
 		
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,23 +32,23 @@
 	</head>
 	<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-		<!--<div id="preloader">
+		<div id="preloader">
 			<div id="status"> <img src="img/preloader.gif" height="64" width="64" alt=""> </div>
-		</div>-->
+		</div>
 	
 		<!-- Navigation -->
 		<nav class="navbar navbar-custom" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-sub-collapse"> <i class="fa fa-bars"></i> </button>
-					<a class="navbar-brand page-scroll" href="#page-top"><img src="/img/favicon.png" width="40px"></a>
+					<a class="navbar-brand page-scroll" href="#page-top"><img src="./img/favicon.png" width="40px"></a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-right navbar-sub-collapse">
 					<ul class="nav navbar-nav">
 						<!-- Hidden li included to remove active class from about link when scrolled up past about section -->
 						<li class="hidden"> <a href="#page-top"></a> </li>
-						<li> <a class="page-scroll" href="#about">About</a> </li>
+						<li> <a href="https://www.initialapps.com">Blog</a> </li>
 					</ul>
 				</div>
 				<!-- /.navbar-collapse --> 
@@ -64,18 +64,19 @@
     				<div class="row">
 					<div class="col-md-8 pull-right">
 						<div class="intro-body">
-							<h1 class="wow animated fadeIn" data-wow-delay="0.1s">Helping your business grow</h1>
-							<h3 class="wow animated fadeInLeft" data-wow-delay="0.6s">Websites, SaaS, Content Marketing</h3>
+							<h1 class="wow animated fadeInDown" data-wow-delay="100ms">You're growing a business.</h1>
+							<h2 class="wow animated fadeInRight" data-wow-delay="600ms">We're here to help!</h2>
+							<h3 class="wow animated fadeInUp" data-wow-delay="1100ms">Websites | SaaS | Content Marketing</h3>
 							<br>
 						</div>
 	    				</div>
 					<div class="col-md-4 pull-left">
 						<div class="panel">
-							<div class="panel panel-heading text-center">
+							<div class="panel-heading text-center">
 								<h3>Schedule Free Consultation</h3>
 							</div>
 							<!-- Begin MailChimp Signup Form -->
-							<div class="panel panel-body">
+							<div class="panel-body">
 								<form action="https://initialapps.us17.list-manage.com/subscribe/post?u=be1e3164b5fc55f0407c2859c&amp;id=8349058064" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 									<div class="form-group col-xs-12">
 										<input type="text" value="" name="NAME" id="mce-NAME" class="form-control" placeholder="Your Name" required>
@@ -84,7 +85,7 @@
 										<input type="email" value="" name="EMAIL" id="mce-EMAIL"class="required email form-control" placeholder="Your Email" required>
 									</div>
 									<div class="form-group col-xs-12" style="max-height:90px;">
-										<button type="submit" id="mc-embedded-subscribe" class="btn btn-default" style="width:100%;" name="subscribe">Submit</button>
+										<button type="submit" id="mc-embedded-subscribe" class="btn btn-info" style="width:100%;" name="subscribe">Submit</button>
 										<div id="mce-responses" class="clear text-center">
 											<div class="response" id="mce-error-response" style="display:none"></div>
 											<div class="response" id="mce-success-response" style="display:none"></div>
@@ -106,30 +107,75 @@
 		<div id="about">
 			<div class="container">
 				<div class="section-title text-center center">
-					<h2>Your custom business software without the high development costs</h2>
-					<br>
+					<h2>Ever asked why there isn't an app for that?</h2>
 					<hr>
+					<h4>Let's build it together!</h4>
 				</div>
 				<div class="row">
 					<div class="col-md-4 text-center">
 						<div class="service-box">
 							<i class="fa fa-4x fa-cloud-upload text-primary  zoomIn wow animated" style="visibility: visible; animation-name: zoomIn;"></i>
-							<h3>Accessibility</h3>
+							<h3>Access</h3>
 							<p class="text-muted">Collaborate and share files in the cloud</p>
 						</div>
 					</div>
 					<div class="col-md-4 text-center">
 						<div class="service-box">
-							<i class="fa fa-4x fa-paper-plane text-primary  zoomIn wow animated" data-wow-delay="250ms" style="visibility: visible; animation-delay: 250ms; animation-name: zoomIn;"></i>
-							<h3>Streamline</h3>
-							<p class="text-muted">Streamline operations and workflows</p>
+							<i class="fa fa-4x fa-desktop text-primary  zoomIn wow animated" data-wow-delay="250ms" style="visibility: visible; animation-delay: 500ms; animation-name: zoomIn;"></i>
+							<h3>Organize</h3>
+							<p class="text-muted">Search and organize files with ease</p>
 						</div>
 					</div>
 					<div class="col-md-4 text-center">
 						<div class="service-box">
-							<i class="fa fa-4x fa-desktop text-primary  zoomIn wow animated" data-wow-delay="500ms" style="visibility: visible; animation-delay: 500ms; animation-name: zoomIn;"></i>
-							<h3>Organize</h3>
-							<p class="text-muted">Search and organize files with ease</p>
+							<i class="fa fa-4x fa-paper-plane text-primary  zoomIn wow animated" data-wow-delay="500ms" style="visibility: visible; animation-delay: 250ms; animation-name: zoomIn;"></i>
+							<h3>Streamline</h3>
+							<p class="text-muted">Streamline operations and workflows</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Vision Section -->
+		<div id="vision" class="text-center">
+			<div class="container">
+				<div class="section-title center">
+					<h1>We help you conquer your mundane business processes!</h1>
+					<hr>
+					<h2>Your custom software delivered at a simple and affordable monthly subscription.</h2>
+				</div>
+			</div>
+		</div>
+
+		<!-- Services Section -->
+		<div id="services">
+			<div class="container">
+				<div class="section-title text-center center">
+					<h2>Need to grow your online presence?</h2>
+					<hr>
+					<h4>We've got you covered</h4>
+				</div>
+				<div class="row">
+					<div class="col-md-4 text-center">
+						<div class="service-box">
+							<i class="fa fa-4x fa-laptop text-primary  zoomIn wow animated" style="visibility: visible; animation-name: zoomIn;"></i>
+							<h3>Websites</h3>
+							<p class="text-muted">Simple, effective, affordable websites</p>
+						</div>
+					</div>
+					<div class="col-md-4 text-center">
+						<div class="service-box">
+							<i class="fa fa-4x fa-share-alt-square text-primary  zoomIn wow animated" data-wow-delay="250ms" style="visibility: visible; animation-delay: 250ms; animation-name: zoomIn;"></i>
+							<h3>Content Marketing</h3>
+							<p class="text-muted">Find better ways to connect with customers</p>
+						</div>
+					</div>
+					<div class="col-md-4 text-center">
+						<div class="service-box">
+							<i class="fa fa-4x fa-comments-o text-primary  zoomIn wow animated" data-wow-delay="500ms" style="visibility: visible; animation-delay: 500ms; animation-name: zoomIn;"></i>
+							<h3>Community</h3>
+							<p class="text-muted">Interact with our blog for help</p>
 						</div>
 					</div>
 				</div>
@@ -140,21 +186,21 @@
 		<div id="quote" class="text-center">
 			<div class="container">
 				<div class="section-title center">
-					<h2>Schedule a free quote and consultation</h2>
+					<h1>Sign up for a free consultation</h1>
 					<hr>
 					<br>
 					<br>
-					<a href="#intro" class="btn btn-lg btn-default page-scroll"><b>Sign Up</b></a> 
+					<a href="#intro" class="btn btn-lg btn-default page-scroll"><b>Get Started</b></a> 
 				</div>
 			</div>
 		</div>
 
 
 		<!-- Testimonials Section -->
-		<!--<div id="testimonials" class="text-center">
+		<!--<div id="testimonials" class="text-center" >
 			<div class="container">
 				<div class="section-title center">
-					<h2>What our patients say</h2>
+					<h2></h2>
 					<hr>
 					</div>
 					<div class="row">
@@ -192,70 +238,6 @@
 				</div>
 			</div>
 		</div>-->
-
-
-		<!--<footer>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="wow fadeInDown animated" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInDown;">
-							<h4>Contact Us</h4>
-							<ul>
-								<li>
-									<span class="fa-stack fa-lg">
-										<i class="fa fa-circle fa-stack-2x"></i>
-										<i class="fa fa-map-marker fa-stack-1x fa-inverse"></i> 
-									</span>
-									9240 N Meridian St Suite 240, Indianapolis IN, 46260
-								</li>
-								<li>
-									<span class="fa-stack fa-lg">
-										<i class="fa fa-circle fa-stack-2x"></i>
-										<i class="fa fa-calendar-o fa-stack-1x fa-inverse"></i>
-									</span> 
-									M-Th: 9am to 5pm | F: 9am to 4pm | Closed 12pm-1pm Daily
-								</li>
-								<li>
-									<span class="fa-stack fa-lg">
-										<i class="fa fa-circle fa-stack-2x"></i>
-										<i class="fa fa-phone fa-stack-1x fa-inverse"></i>
-									</span> 
-									P: (317) 571-0030 | F: (317)219-4690
-								</li>
-								<li>
-									<span class="fa-stack fa-lg">
-										<i class="fa fa-circle fa-stack-2x"></i>
-										<i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
-									</span> 
-									info@carmelendo.com
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="wow fadeInDown animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInDown;">
-							<h4>Patient Resources</h4>
-							<ul>
-								<li><a href="https://www.onpatient.com/">Patient Portal</a></li>
-								<li><a class="page-scroll" href="#about">About</a> </li>
-								<li><a class="page-scroll" href="#services">Services</a> </li>
-								<li><a class="page-scroll" href="#team">Our Staff</a> </li>
-								<li><a class="page-scroll" href="#testimonials">Testimonials</a> </li>
-								<li><a class="page-scroll" href="#contact">Contact</a> </li>
-							</ul>
-							<h4>Follow us</h4>
-							<ul class="company-social">
-								<li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li class="social-google"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-								<li class="social-vimeo"><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
-								<li class="social-dribble"><a href="#"><i class="fa fa-dribbble"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div> 
-			</div>
-		</footer>-->
 		
 		<div id="footer">
 			<div class="container">
