tweeks to about

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		<div id="vision" class="text-center">
 			<div class="container">
 				<div class="section-title center">
-					<h1>We help you conquer your mundane business processes!</h1>
+					<h1>Helping you conquer your mundane business processes!</h1>
 					<hr>
 					<h2>Your custom software delivered at a simple and affordable monthly subscription.</h2>
 				</div>
