--- a/demos/psi/locations.html
+++ b/demos/psi/locations.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Pacific Skin Institute</title>
-		<meta name="description" content="">
+		<title>Pacific Skin Institute | Board Certified Dermatologists of Sacramento</title>
+		<meta name="description" content="Provider of board certified dermatology, serving the greater Sacramento area">
 		<meta name="author" content="">
 		<link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 		
@@ -115,7 +115,7 @@
 							<iframe src="https://www.google.com/maps/d/embed?mid=1Mcvt_RtIm7lOruMlKrs9bPEuMP6V7AU_" width="100%" height="396" frameborder="0" style="border:0; margin-top: -46px;"></iframe>
 						</div>
 					</div>
-					<div class="wow animated fadeIn col-md-6 address" data-wow-delay="0.4s">
+					<div class="col-md-6 address" data-wow-delay="0.4s">
 						<h3>Sacramento Office</h3>
 						<ul>
 							<li>
@@ -150,7 +150,7 @@
 							<iframe src="https://www.google.com/maps/d/embed?mid=1DEDkJJtMDPT07dFPejNmHy0DcqUXE0Kn" width="100%" height="396" frameborder="0" style="border:0; margin-top: -46px;"></iframe>
 						</div>
 					</div>
-					<div class="wow animated fadeIn col-md-6 address" data-wow-delay="0.4s">
+					<div class="col-md-6 address" data-wow-delay="0.4s">
 						<h3>Folsom Office</h3>
 						<ul>
 							<li>
