--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -73,7 +73,7 @@
 							<!-- Hidden li included to remove active class from about link when scrolled up past about section -->
 							<li class="hidden"> <a href="#page-top"></a> </li>
 							<li> <a class="page-scroll" href="#about">About Us</a> </li>
-							<li> <a class="page-scroll" href="#testimonials">Testimonials</a> </li>
+							<li> <a class="page-scroll" href="#testimonials">Our Values</a> </li>
 							<li> <a class="page-scroll" href="#capabilities">Our Capabilities</a> </li>
 							<li> <a class="page-scroll" href="#facilities">Our Facilities</a> </li>
 							<li> <a class="page-scroll" href="#contact">Contact Us</a> </li>
@@ -100,10 +100,10 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-12">
-											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Header<br>Top Header Text</h1>
-											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">Secondary Header Text</h3>
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Precision <br>Machined Components</h1>
+											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">premier supplier for the medical device market</h3>
 											<br>
-											<a href="#services" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
+											<a href="#about" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
 										</div>
 									</div>
 								</div>
@@ -118,10 +118,10 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-12">
-											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Header<br>Top Header Text</h1>
-											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">Secondary Header Text</h3>
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Premier <br>Precision Manufacturer</h1>
+											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">for the medical device market</h3>
 											<br>
-											<a href="#services" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
+											<a href="#about" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
 										</div>
 									</div>
 								</div>
@@ -170,15 +170,24 @@
 					<div class="col-md-6">
 						<h3><a href="#">Premier Precision Machining</a></h3>
 						<p>
-							3D TEK CNC, INC. is a premier manufacturer for the medical device market. Specializing in precision medical components and micro mold builds for implantable silicone components.
+							3D TEK CNC, INC. is a <strong>precision machine shop</strong> serving a core spectrum of precision industries which
+							include Medical, Aerospace, MEMS Technology and Particle Accelerator Industries. Specializing in
+							precision medical components and micro mold builds for implantable silicone components.
 						</p>
 						<p>
-							With over 30 years of machining experience, 3D TEK CNC, INC. is capable of machining all types of medical grade materials, including Titanium 6AL-4V, Niobium, Polysulfone and PEEK. Whether your needs are prototype or production volumes, tooling or assembled fixtures, 3D TEK CNC has the expertise to help you bring your medical products to market.
+							3D TEK CNC, INC is committed to customer satisfaction. We strive to be your preferred supplier. We
+							deliver the highest quality components on schedule to keep your projects on time.
+						</p>
+						<p>
+							With over 30 years of machining experience, 3D TEK CNC, INC. is capable of machining all types of
+							medical grade materials, including Titanium 6AL-4V, Niobium, Polysulfone and PEEK. Whether your
+							needs are prototype or production volumes, tooling or assembled fixtures, 3D TEK CNC, INC. has the
+							expertise to help you bring your products to market.
 						</p>
 					</div>
 					<div class="col-md-6">
 						<!--<img src="http://via.placeholder.com/500x350">-->
-						<img width="500" src="img/machine-shop.jpg">
+						<img width="500" src="img/machine-shop.jpg" alt="Precision Machine Shop Ventura CA">
 					</div>
 				</div>
 				<br>
@@ -226,7 +235,7 @@
 				<br>
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<a href="#" class="btn btn-default">View More</a>
+						<!--<a href="#" class="btn btn-default">View More</a>-->
 					</div>
 				</div>
 			</div>
@@ -236,36 +245,52 @@
 		<div id="testimonials" class="text-center">
 			<div class="container">
 				<div class="section-title center">
-					<h2>What our customers say</h2>
+					<h2>We help bring your medical products to market</h2>
 					<hr>
-					</div>
-					<div class="row">
+					<h3>3D TEK CNC Core Values</h3>
+					<br>
+					<br>
+					<br>
+				</div>
+				<div class="row">
 					<div class="col-md-10 col-md-offset-1">
 						<div class="row testimonials">
 							<div class="col-sm-4">
-								<blockquote><i class="fa fa-quote-left"></i>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
+								<blockquote>
+									<p><strong>Pursuit of Excellence</strong><br>
+									<em></em></p>
 									<div class="clients-name">
-										<p><strong>John Doe</strong><br>
-										<em></em></p>
+										<p>
+											We exceed customer expectations.
+											We deliver superior components/parts.
+											We commit to innovation and continuous improvement.
+										</p>
 									</div>
 								</blockquote>
 							</div>
 							<div class="col-sm-4">
-								<blockquote><i class="fa fa-quote-left"></i>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
-									<div class="clients-name">
-									<p><strong>Jane Doe</strong><br>
+								<blockquote>
+									<p><strong>Teamwork and Respect</strong><br>
 									<em></em></p>
+									<div class="clients-name">
+										<p>
+											We respect each other's opinions.
+											We empower employees to make decisions.
+											We recognize the power of collaboration.
+										</p>
 									</div>
 								</blockquote>
 							</div>
 							<div class="col-sm-4">
-								<blockquote><i class="fa fa-quote-left"></i>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p>
-									<div class="clients-name">
-									<p><strong>Chris Smith</strong><br>
+								<blockquote>
+									<p><strong>Integrity</strong><br>
 									<em></em></p>
+									<div class="clients-name">
+										<p>
+											We deliver on our commitments.
+											We are socially and environmentally responsible.
+											We do the right thing.
+										</p>
 									</div>
 								</blockquote>
 							</div>
@@ -304,12 +329,12 @@
 							<div class="text-center wow animated fadeIn">
 								<img src="img/machined-parts-2.jpg">
 							</div>
-							<div class="text-center wow animated fadeIn">
+							<!--<div class="text-center wow animated fadeIn">
 								<img src="img/multi-axis-machining-1.jpg">
 							</div>
 							<div class="text-center wow animated fadeIn">
 								<img src="img/multi-axis-machining-2.jpg">
-							</div>
+							</div>-->
 						</div>
 						<br>
 						<div class="row text-center gallery-slider-nav hidden-xs">
@@ -331,12 +356,12 @@
 							<div class="text-center wow animated fadeIn">
 								<img src="img/machined-parts-2.jpg" height="50">
 							</div>
-							<div class="text-center wow animated fadeIn">
+							<!--<div class="text-center wow animated fadeIn">
 								<img src="img/multi-axis-machining-1.jpg" height="50">
 							</div>
 							<div class="text-center wow animated fadeIn">
 								<img src="img/multi-axis-machining-2.jpg" height="50">
-							</div>
+							</div>-->
 
 						</div>
 					</div>
@@ -371,8 +396,14 @@
 							2362 Sturgis Rd. Oxnard, CA 93030
 						</h4>
 						<br>
-						<p>Located in Ventura County 3D TEK CNC, INC. is a premier supplier of precision machined components to the medical device market.</p>
-						<p>Our continuous investment in State-Of-The-Art CNC Machining Centers provides our customers with the assurance that we can meet their high precision component requirements.</p>
+						<p>
+							3D TEK CNC, INC. is located in Ventura County. Our State-Of-The-Art Machine shop gives us control over
+							our manufacturing operations while maintaining the highest level of precision and quality assurance.
+						</p>
+						<p>
+							Our continuous investment in <strong>High-End Precision Machining Centers</strong> provides our customers with the
+							assurance that we can meet their high precision component requirements.
+						</p>
 					</div>
 				</div>
 				<br>
@@ -401,13 +432,11 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="wow fadeInDown animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInDown;">
-							<h2>Certifications</h2>
+							<h2>Certification</h2>
 							<hr>
 							<br>
 							<ul>
-								<li> <a href="">ISO 123456</a> </li>
-								<li> <a href="">ITAR 123456</a> </li>
-								<li> <a href="">ASME 123456</a> </li>
+								<li> <a href="">ISO 9001-2015</a> </li>
 							</ul>
 						</div>
 					</div>
